; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/gdiplus/extr_pen.c_gdip_to_gdi_dash.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/gdiplus/extr_pen.c_gdip_to_gdi_dash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PS_SOLID = common dso_local global i32 0, align 4
@PS_DASH = common dso_local global i32 0, align 4
@PS_DOT = common dso_local global i32 0, align 4
@PS_DASHDOT = common dso_local global i32 0, align 4
@PS_DASHDOTDOT = common dso_local global i32 0, align 4
@PS_USERSTYLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"Not a member of GpDashStyle enumeration\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @gdip_to_gdi_dash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gdip_to_gdi_dash(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %17 [
    i32 128, label %5
    i32 132, label %7
    i32 129, label %9
    i32 131, label %11
    i32 130, label %13
    i32 133, label %15
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @PS_SOLID, align 4
  store i32 %6, i32* %2, align 4
  br label %19

7:                                                ; preds = %1
  %8 = load i32, i32* @PS_DASH, align 4
  store i32 %8, i32* %2, align 4
  br label %19

9:                                                ; preds = %1
  %10 = load i32, i32* @PS_DOT, align 4
  store i32 %10, i32* %2, align 4
  br label %19

11:                                               ; preds = %1
  %12 = load i32, i32* @PS_DASHDOT, align 4
  store i32 %12, i32* %2, align 4
  br label %19

13:                                               ; preds = %1
  %14 = load i32, i32* @PS_DASHDOTDOT, align 4
  store i32 %14, i32* %2, align 4
  br label %19

15:                                               ; preds = %1
  %16 = load i32, i32* @PS_USERSTYLE, align 4
  store i32 %16, i32* %2, align 4
  br label %19

17:                                               ; preds = %1
  %18 = call i32 @ERR(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %17, %15, %13, %11, %9, %7, %5
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @ERR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
